# airlane

./: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  commands.rs  config.rs  lib.rs  main.rs  message.rs  utils.rs
src/components/: ThemeSwitcher.tsx  app-sidebar.tsx
