[package]
name = "airlane"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# # The `_lib` suffix may seem redundant but it is necessary
# # to make the lib name unique and wouldn't conflict with the bin name.
# # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
# name = "airlane_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
microxdg = "0.2.0"
taskchampion = "2.0.3"
anyhow = "1.0.98"
tempfile = "3.20.0"
log = "0.4.27"
oneshot = "0.1.11"
